fixed overflow on sidebar & other stuff

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ main {
 }
 
 .sidebar {
+    overflow-y: auto;
     padding: 10px;
     width: 250px;
     text-align: left;
